--- a/my_new_app/index.html
+++ b/my_new_app/index.html
@@ -47,9 +47,9 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/Kea0420/my-New-Project/tree/main/my_new_app/src" target="_blank">Keabetswe Dikotsi</a> and is
+          <a href="https://github.com/Kea0420/my-New-Project/tree/main" target="_blank"> on GitHub</a> and
+          <a href="https://app.netlify.com/projects/keashecodes/deploys/6963f2750c14570008e74b2b" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
